Добавлен оператор print - теперь проще отлаживать. Собирается:)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ include_directories(${CMAKE_SOURCE_DIR}/build)
 include_directories(${CMAKE_SOURCE_DIR}/backend)
 include_directories(${CMAKE_SOURCE_DIR}/frontend)
 
-file(GLOB FRONTEND_SRC_LIST ${PROJECT_SOURCE_DIR}/frontend/*.cpp ${PROJECT_SOURCE_DIR}/frontend/*.c ${PROJECT_SOURCE_DIR}/frontend/*.h ${PROJECT_SOURCE_DIR}/frontend/*.y)
+file(GLOB FRONTEND_SRC_LIST ${PROJECT_SOURCE_DIR}/frontend/*.cpp ${PROJECT_SOURCE_DIR}/frontend/*.c ${PROJECT_SOURCE_DIR}/frontend/*.h ${PROJECT_SOURCE_DIR}/frontend/*.y ${PROJECT_SOURCE_DIR}/frontend/*.l)
 file(GLOB BACKEND_SRC_LIST ${PROJECT_SOURCE_DIR}/backend/*.cpp ${PROJECT_SOURCE_DIR}/backend/*.c ${PROJECT_SOURCE_DIR}/backend/*.h)
 file(GLOB BUILD_SRC_LIST ${PROJECT_SOURCE_DIR}/build/*.cpp ${PROJECT_SOURCE_DIR}/build/*.c ${PROJECT_SOURCE_DIR}/build/*.h)
 
