Добавил тесты для проверки правильно ли передаются аргументы командной строки.

--- a/tests/main_args_process.in
+++ b/tests/main_args_process.in
@@ -1,5 +1,11 @@
 func main (args->[[char]]) -> int
+	argsCnt = length(args) -> int;
 
+	print argsCnt;
+
+	for i = 0 -> int to argsCnt - 1 do
+		print args[i];
+	endfor;
 
 	main = 0;
 endfunc
