--- a/tests/multiply.in
+++ b/tests/multiply.in
@@ -1,5 +1,5 @@
 proc PrintFunc(a -> int)
-	print a;
+	print(a);
 endproc
 
 func Sqr(a -> int) -> int
@@ -13,29 +13,29 @@ func main (args->[[char]]) -> int
 	mult_arr = [[int] 2] -> [[int]];
 	sum = 0 -> int;
 
-	print a b;
+	print(a b);
 
 	arr[0] = 6;
 
-	print arr[0];
+	print(arr[0]);
 
-	print arr[0] arr[0];
+	print(arr[0] arr[0]);
 
 	mult_arr[0] = [int 10];
 
 	mult_arr[0][5] = 20;
 
-	print mult_arr[0][5];
+	print(mult_arr[0][5]);
 
 	sum = sum + (mult_arr[0][5] mult_arr[0][5]);
 
-	print sum;
+	print(sum);
 
 	PrintFunc(20);
 
-	print Sqr(2) (Sqr(3) Sqr(5));
+	print(Sqr(2) (Sqr(3) Sqr(5)));
 
-	print Sqr(3) mult_arr[0][5];
+	print(Sqr(3) mult_arr[0][5]);
 
 	main = 0;
 endfunc
