--- a/tests/test1.in
+++ b/tests/test1.in
@@ -10,19 +10,19 @@ func Op (a,b->int; op->char) -> int
 endfunc
 
 proc PairPrint(a,b->int)
-	print a;
-	print b;
+	print(a);
+	print(b);
 endproc
 
 func main (args->[[char]]) -> int
 	a = 89, b = 11 -> int;
 
-	print Op(a, b, '+');
-	print Op(a, b, '-');
+	print(Op(a, b, '+'));
+	print(Op(a, b, '-'));
 
 	a = ((2 + 6) / 4) - (1);
 
-	print 99 + (6 / 2);
+	print(99 + (6 / 2));
 
 	main = 0;
 endfunc
