--- a/tests/arrays_print.in
+++ b/tests/arrays_print.in
@@ -4,7 +4,7 @@ func PrintArray(a->[[int]]; n->int) -> int
 
 	for i = 0 to n-1 do
 		for j = 0 to n-1 do
-			print a[i][j];
+			print(a[i][j]);
 		endfor;
 	endfor;
 
