--- a/tests/func_calls.in
+++ b/tests/func_calls.in
@@ -23,7 +23,7 @@ func main (args->[[char]]) -> int
 
 	Func2('1', '2', [int 5], [[[[int]]] 5]);
 
-	print Sum(2, 5);
+	print(Sum(2, 5));
 
 	main = 0;
 endfunc
