--- a/tests/arithmetic.in
+++ b/tests/arithmetic.in
@@ -21,6 +21,8 @@ func main (args->[[char]]) -> int
 	print(2 + 2 - 2);
 
 	print(2 2^10 / 3 % 10 + 2 - 1);
+
+	print(4 5 / 10 50);
 	
 	main = 0;
 endfunc
